--- a/src/style/main.css
+++ b/src/style/main.css
@@ -4,6 +4,34 @@ body {
     overflow: hidden;
 }
 
+#canvas-container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+#background,
+#entities,
+#gameloopError {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#background {
+    z-index: 1;
+}
+
+#entities {
+    z-index: 2;
+}
+
+#gameloopError {
+    z-index: 3;
+}
+
 .reticule {
     cursor: crosshair;
 }
